--- a/index.html
+++ b/index.html
@@ -4,7 +4,10 @@
     <meta charset="UTF-8" />
     <link rel="icon" type="image/svg+xml" href="/vite.svg" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>Vite + React + TS</title>
+    <title>AoE4 Twitch Tech Tree</title>
+
+    <!-- ✅ Twitch Extension SDK -->
+    <script src="https://extension-files.twitch.tv/helper/v1/twitch-ext.min.js"></script>
   </head>
   <body>
     <div id="root"></div>
