--- a/index.html
+++ b/index.html
@@ -5,10 +5,9 @@
     <link rel="icon" type="image/png" href="/favicon.png" />
     <link href="https://fonts.googleapis.com/css2?family=Crimson+Pro:wght@400;600;700&display=swap" rel="stylesheet">
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>AoE4 Twitch Tech Tree</title>
+    <title>Unofficial AoE4 Tech Tree</title>
   </head>
   <body>
-    <script src="https://extension-files.twitch.tv/helper/v1/twitch-ext.min.js"></script>
     <div id="root"></div>
     <script type="module" src="/src/main.tsx"></script>
   </body>
