--- a/index.html
+++ b/index.html
@@ -8,6 +8,7 @@
     <title>Unofficial AoE4 Tech Tree</title>
   </head>
   <body>
+    <script src="https://extension-files.twitch.tv/helper/v1/twitch-ext.min.js"></script>
     <div id="root"></div>
     <script type="module" src="/src/main.tsx"></script>
   </body>
